2005-10-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ttf.cc (print_trailer): only define glyph names when
	FT_Face has FT_FACE_FLAG_GLYPH_NAMES

2005-10-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/horizontal-bracket.cc (make_bracket): new function.

	* scm/define-grobs.scm (all-grob-descriptions): new grobs
	NewBassFigure, BassFigureBracket, BassFigureContinuation,
	BassFigureLine, BassFigureAlignment

	* lily/new-figured-bass-engraver.cc (process_music): new file.

	* lily/figured-bass-continuation.cc: new file.

	* lily/include/horizontal-bracket.hh (struct Horizontal_bracket):
	new file.

2005-10-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py: Bug fix, put the quote around the
	actual score for LaTeX documents.

	* scm/define-grobs.scm (all-grob-descriptions): Change
	collapse-height of the SystemStartBracket grob to 5.0, 
	so the bracket disappears for single stave score lines (similarly
	to SystemStartBraces). 

	* Documentation/user/advanced-notation.itely (Polymetric
	notation): Clarify the use of compressMusic.

	* Documentation/user/basic-notation.itely (Grace notes): Clarify
	that the grace spacer note in other staves need the same duration
	and document the stroke-style property.

2005-10-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/global.itely (Vertical spacing): document
	alignment-extra-space and fixed-alignment-extra-space.

	* Documentation/topdocs/NEWS.tely (Top): add entry.

	* input/regression/alignment-vertical-spacing.ly: new file.

	* python/convertrules.py (conv): add rule.

	* ly/music-functions-init.ly: rename outputProperty to overrideProperty

	* lily/align-interface.cc (stretch_after_break): new
	function. Read fixed-alignment-extra-space property.
	(align_elements_to_extents): read alignment-extra-space property.

	* lily/lily-guile.cc (robust_scm2dir): new function.

	* scm/page-layout.scm (page-headfoot): annotate headsep and footsep.